test/invalid/list_mixed_types.py
# List with mixed element types
def main() -> None:
    nums: list[int] = [1, "hello", 3]
    print(nums[0])
